hello-world-service/k8s/overlays/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-service
  labels:
    version: latest
spec:
  selector:
    matchLabels:
      version: latest
  template:
    metadata:
      labels:
        version: latest
    spec:
      containers:
      - name: hello-world-service
        image: dsoc/hello-world-service:latest
