hello-world-service/k8s/overlays/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    version: latest
spec:
  selector:
    version: latest
