hello-world-service/k8s/overlays/minikube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-service-ingress
spec:
  hosts:
    - challenge.local
